# rlbot-bm-rust

./: .gitmodules  Cargo.toml  README.md  build.rs
.cargo/: config.toml
examples/: atba.rs
examples/atba/: rustbot.cfg
rlbot-bm/: Cargo.toml
rlbot-bm-sys/: build.rs
rlbot-bm/examples/atba/: rustbot.bat  rustbot.py
rlbot-bm/src/: input.rs
src/: lib.rs  state.rs
